--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-time-machine
 source: .
-baseurl: "/easy-xml"
+baseurl: "/"
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
@@ -12,7 +12,7 @@ title:               Isilex
 tagline:             'French Digital Humanities Network'
 description:         'French Digital Humanities'
 url:                 https://isilex.github.io/easy-xml/
-baseurl:             ''
+baseurl:             '/'
 paginate:            5
 
 # About/contact
