--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:           pretty
 # Setup
 title:               Isilex
 tagline:             'Easy Collaborative XML Data Driver'
-description:         'Isilex is a CMS based on Basex (http://www.basex.org)'
+description:         'Isilex is a CMS based on Basex'
 url:                 https://isilex.github.io/easy-xml/
 baseurl: "/easy-xml"
 paginate:            5
